--- a/public/style.css
+++ b/public/style.css
@@ -602,13 +602,14 @@ video {
   margin: 1rem;
 }
 
-.m-16{
-  margin: 4rem;
-}
-
 .mx-5{
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+}
+
+.my-14{
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .mx-6{
@@ -698,6 +699,10 @@ video {
 
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .self-center{
@@ -791,6 +796,8 @@ video {
 }
 
 .card{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   overflow: hidden;
   border-radius: 0.75rem;
   border-width: 1px;
@@ -801,6 +808,15 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: #6b7280;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+@media (min-width: 640px){
+  .card{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 }
 
 .card-btn{
@@ -942,6 +958,14 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:grid{
+    display: grid;
+  }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .sm\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -949,6 +973,11 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:mx-16{
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+
   .md\:mt-0{
     margin-top: 0px;
   }
@@ -963,5 +992,13 @@ video {
 
   .md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:gap-4{
+    gap: 1rem;
   }
 }
