--- a/public/style.css
+++ b/public/style.css
@@ -612,16 +612,6 @@ video {
   margin-bottom: 3.5rem;
 }
 
-.mx-6{
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-.my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -701,8 +691,8 @@ video {
   gap: 0.75rem;
 }
 
-.gap-4{
-  gap: 1rem;
+.gap-8{
+  gap: 2rem;
 }
 
 .self-center{
@@ -738,27 +728,9 @@ video {
   line-height: 2rem;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.font-bold{
-  font-weight: 700;
-}
-
-.capitalize{
-  text-transform: capitalize;
-}
-
-.text-slate-700{
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity));
 }
 
 .opacity-70{
@@ -796,8 +768,8 @@ video {
 }
 
 .card{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   overflow: hidden;
   border-radius: 0.75rem;
   border-width: 1px;
@@ -834,6 +806,26 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.card-title{
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 700;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+
+.card-description{
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .fav-btn{
   position: absolute;
   top: 0px;
@@ -841,8 +833,8 @@ video {
   margin: 0.75rem;
   cursor: pointer;
   border-radius: 9999px;
-  --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.95;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.5rem;
@@ -850,6 +842,24 @@ video {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(238 242 255 / var(--tw-text-opacity));
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 75ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.fav-btn:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .nav-items {
@@ -958,10 +968,6 @@ video {
 }
 
 @media (min-width: 640px){
-  .sm\:grid{
-    display: grid;
-  }
-
   .sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -978,27 +984,13 @@ video {
     margin-right: 4rem;
   }
 
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
-  .md\:grid{
-    display: grid;
-  }
-
   .md\:hidden{
     display: none;
   }
+}
 
-  .md\:grid-cols-3{
+@media (min-width: 1024px){
+  .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:gap-4{
-    gap: 1rem;
   }
 }
