removed unnecessary code

--- a/public/style.css
+++ b/public/style.css
@@ -562,10 +562,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed{
-  position: fixed;
-}
-
 .relative{
   position: relative;
 }
@@ -588,10 +584,6 @@ video {
 
 .z-20{
   z-index: 20;
-}
-
-.z-10{
-  z-index: 10;
 }
 
 .col-span-2{
@@ -709,6 +701,10 @@ video {
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -731,14 +727,6 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.opacity-70{
-  opacity: 0.7;
-}
-
-.opacity-0{
-  opacity: 0;
 }
 
 .shadow-lg{
