--- a/src/input.css
+++ b/src/input.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 .card {
-    @apply bg-indigo-300 border border-gray-200 rounded-xl overflow-hidden shadow-gray-500 shadow-lg my-4 sm:my-0
+    @apply bg-indigo-300 border border-gray-200 rounded-xl overflow-hidden shadow-gray-500 shadow-lg my-4 sm:my-0 relative hover:scale-105 hover:shadow-gray-600 hover:shadow-lg transition-all ease-in
 }
 
 .card-btn {
