--- a/public/style.css
+++ b/public/style.css
@@ -562,6 +562,14 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
 }
@@ -580,6 +588,94 @@ video {
 
 .top-0{
   top: 0px;
+}
+
+.-left-4{
+  left: -1rem;
+}
+
+.left-64{
+  left: 16rem;
+}
+
+.left-32{
+  left: 8rem;
+}
+
+.top-24{
+  top: 6rem;
+}
+
+.-right-4{
+  right: -1rem;
+}
+
+.right-64{
+  right: 16rem;
+}
+
+.right-32{
+  right: 8rem;
+}
+
+.top-72{
+  top: 18rem;
+}
+
+.top-96{
+  top: 24rem;
+}
+
+.bottom-72{
+  bottom: 18rem;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.top-2\.5{
+  top: 0.625rem;
+}
+
+.top-2{
+  top: 0.5rem;
+}
+
+.left-4{
+  left: 1rem;
+}
+
+.left-72{
+  left: 18rem;
+}
+
+.left-40{
+  left: 10rem;
+}
+
+.-top-7{
+  top: -1.75rem;
+}
+
+.-left-32{
+  left: -8rem;
+}
+
+.top-7{
+  top: 1.75rem;
+}
+
+.-right-32{
+  right: -8rem;
+}
+
+.-top-10{
+  top: -2.5rem;
+}
+
+.-top-16{
+  top: -4rem;
 }
 
 .z-20{
@@ -624,6 +720,10 @@ video {
   display: none;
 }
 
+.h-72{
+  height: 18rem;
+}
+
 .h-16{
   height: 4rem;
 }
@@ -636,6 +736,14 @@ video {
   height: 1.5rem;
 }
 
+.h-80{
+  height: 20rem;
+}
+
+.w-72{
+  width: 18rem;
+}
+
 .w-16{
   width: 4rem;
 }
@@ -646,6 +754,81 @@ video {
 
 .w-6{
   width: 1.5rem;
+}
+
+.w-80{
+  width: 20rem;
+}
+
+.translate-y-10{
+  --tw-translate-y: 2.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-48{
+  --tw-translate-y: -12rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-48{
+  --tw-translate-y: 12rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-80{
+  --tw-translate-y: 20rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-72{
+  --tw-translate-y: 18rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-96{
+  --tw-translate-y: 24rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@-webkit-keyframes blob{
+  0%{
+    transform: translate(0px, 0px) scale(1);
+  }
+
+  33%{
+    transform: translate(30px, -50px) scale(1.1);
+  }
+
+  66%{
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+
+  100%{
+    transform: translate(0px, 0px) scale(1);
+  }
+}
+
+@keyframes blob{
+  0%{
+    transform: translate(0px, 0px) scale(1);
+  }
+
+  33%{
+    transform: translate(30px, -50px) scale(1.1);
+  }
+
+  66%{
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+
+  100%{
+    transform: translate(0px, 0px) scale(1);
+  }
+}
+
+.animate-blob{
+  -webkit-animation: blob 7s infinite;
+          animation: blob 7s infinite;
 }
 
 .cursor-pointer{
@@ -675,9 +858,36 @@ video {
   gap: 2rem;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .bg-indigo-200{
   --tw-bg-opacity: 1;
   background-color: rgb(199 210 254 / var(--tw-bg-opacity));
+}
+
+.bg-purple-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
+.bg-pink-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
 }
 
 .bg-indigo-400{
@@ -685,8 +895,27 @@ video {
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
+.bg-indigo-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-cyan-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
+}
+
+.bg-fixed{
+  background-attachment: fixed;
 }
 
 .object-cover{
@@ -713,10 +942,48 @@ video {
   line-height: 1.25rem;
 }
 
+.opacity-80{
+  opacity: 0.8;
+}
+
+.opacity-90{
+  opacity: 0.9;
+}
+
+.opacity-60{
+  opacity: 0.6;
+}
+
+.opacity-75{
+  opacity: 0.75;
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
+.mix-blend-multiply{
+  mix-blend-mode: multiply;
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.blur-xl{
+  --tw-blur: blur(24px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-lg{
+  --tw-blur: blur(16px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .backdrop-blur-xl{
@@ -737,6 +1004,16 @@ video {
 
 .ease-linear{
   transition-timing-function: linear;
+}
+
+.animation-delay-2000 {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.animation-delay-4000 {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
 }
 
 .card{
@@ -1009,7 +1286,17 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:block{
+    display: block;
+  }
+
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:block{
+    display: block;
   }
 }
