--- a/src/input.css
+++ b/src/input.css
@@ -5,6 +5,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .animation-delay-2000 {
+        animation-delay: 2s;
+    }
+    .animation-delay-4000 {
+        animation-delay: 4s;
+    }
+}
+
 .card {
     @apply bg-indigo-300 border border-gray-200 rounded-xl overflow-hidden shadow-gray-500 shadow-lg my-4 sm:my-0 relative hover:scale-102 hover:shadow-gray-600 hover:shadow-lg transition-all ease-in
 }
