aligned the card buttons icons with each other

--- a/public/style.css
+++ b/public/style.css
@@ -606,6 +606,10 @@ video {
   top: 6rem;
 }
 
+.top-72{
+  top: 18rem;
+}
+
 .-right-4{
   right: -1rem;
 }
@@ -618,28 +622,8 @@ video {
   right: 8rem;
 }
 
-.top-72{
-  top: 18rem;
-}
-
 .top-96{
   top: 24rem;
-}
-
-.bottom-72{
-  bottom: 18rem;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.top-2\.5{
-  top: 0.625rem;
-}
-
-.top-2{
-  top: 0.5rem;
 }
 
 .left-4{
@@ -650,32 +634,8 @@ video {
   left: 18rem;
 }
 
-.left-40{
-  left: 10rem;
-}
-
-.-top-7{
-  top: -1.75rem;
-}
-
-.-left-32{
-  left: -8rem;
-}
-
-.top-7{
-  top: 1.75rem;
-}
-
 .-right-32{
   right: -8rem;
-}
-
-.-top-10{
-  top: -2.5rem;
-}
-
-.-top-16{
-  top: -4rem;
 }
 
 .z-20{
@@ -724,6 +684,10 @@ video {
   height: 18rem;
 }
 
+.h-80{
+  height: 20rem;
+}
+
 .h-16{
   height: 4rem;
 }
@@ -736,38 +700,24 @@ video {
   height: 1.5rem;
 }
 
-.h-80{
-  height: 20rem;
+.w-full{
+  width: 100%;
 }
 
 .w-72{
   width: 18rem;
 }
 
-.w-16{
-  width: 4rem;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
 .w-80{
   width: 20rem;
 }
 
-.translate-y-10{
-  --tw-translate-y: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-16{
+  width: 4rem;
 }
 
-.-translate-y-48{
-  --tw-translate-y: -12rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-6{
+  width: 1.5rem;
 }
 
 .translate-y-48{
@@ -775,18 +725,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-80{
-  --tw-translate-y: 20rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .translate-y-72{
   --tw-translate-y: 18rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-96{
-  --tw-translate-y: 24rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -858,10 +798,6 @@ video {
   gap: 2rem;
 }
 
-.overflow-hidden{
-  overflow: hidden;
-}
-
 .overflow-x-hidden{
   overflow-x: hidden;
 }
@@ -890,11 +826,6 @@ video {
   background-color: rgb(249 168 212 / var(--tw-bg-opacity));
 }
 
-.bg-indigo-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
-}
-
 .bg-indigo-600{
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
@@ -910,12 +841,13 @@ video {
   background-color: rgb(6 182 212 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-70{
-  --tw-bg-opacity: 0.7;
+.bg-indigo-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
-.bg-fixed{
-  background-attachment: fixed;
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
 }
 
 .object-cover{
@@ -942,24 +874,12 @@ video {
   line-height: 1.25rem;
 }
 
-.opacity-80{
-  opacity: 0.8;
-}
-
-.opacity-90{
-  opacity: 0.9;
-}
-
 .opacity-60{
   opacity: 0.6;
 }
 
 .opacity-75{
   opacity: 0.75;
-}
-
-.opacity-0{
-  opacity: 0;
 }
 
 .mix-blend-multiply{
@@ -974,11 +894,6 @@ video {
 
 .blur-xl{
   --tw-blur: blur(24px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-lg{
-  --tw-blur: blur(16px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1064,7 +979,37 @@ video {
   align-self: center;
 }
 
-.card-btn{
+.card-btn-ingredients{
+  margin: 0.25rem;
+  display: flex;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  justify-content: center;
+  border-radius: 9999px;
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-right: 0.75rem;
+  padding-left: 2.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.card-btn-ingredients:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.card-btn-origins{
   margin: 0.25rem;
   display: flex;
   cursor: pointer;
@@ -1089,7 +1034,37 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.card-btn:hover{
+.card-btn-origins:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.card-btn-watch{
+  margin: 0.25rem;
+  display: flex;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  justify-content: center;
+  border-radius: 9999px;
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.75rem;
+  padding-right: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.card-btn-watch:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
@@ -1286,10 +1261,6 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:block{
-    display: block;
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
